# fundamental-fastapi-project

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 9a84b2b12ec2_create_table_users.py  9e0d2a513204_create_table_products.py  d25666221480_message.py  f6d0c5f267ff_create_table_orders.py  faa6aec90599_create_table_payments.py
app/: dependencies.py  main.py  pyproject.toml
app/crud/: crud_orders.py  crud_payments.py  crud_products.py  crud_users.py  database.py  models.py  schemas.py
app/endpoints/internal/: admin.py
app/endpoints/routers/: items.py  orders.py  payments.py  products.py  users.py
app/routers/: items.py
app/service/: auth.py  oauth2.py  security.py  token.py
sql_app/: crud.py  database.py  main.py  models.py  security.py
static/: index.html
