[tool.poetry]
name = "fundamental-fastapi-project"
version = "0.1.0"
description = ""
authors = ["Viet-dang-dung-GIT <viet.info.43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.1"
uvicorn = "^0.29.0"
mako = "^1.3.2"
sqlalchemy = "^2.0.29"
typing-extensions = "^4.10.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
